         Spectranet code if required libraries are not present (patch #3589476)
         (Sergio).
20121202 Makefile.am: translate path used for makensis on cygwin (win32 port)
         (Sergio).
20121208 configure.ac,peripherals/flash/am29f010.c,peripherals/printer.c,
         pokefinder/pokemem.c,rectangle.c,sound/{blipbuffer.c,win32sound.c},
         sound.c,ui/win32/{about.rc,browse.rc,binary.{c,rc},debugger.rc,
         hyperlinks.c,memorybrowser.{c,rc},picture.{c,rc},pokefinder.rc,
         pokemem.{c,rc},rollback.rc,roms.c,select_template.rc,win32joystick.c,
         win32ui.c},windres.rc: preliminary support for 64-bits binaries for
         Windows (patch #3591613) (Sergio).
20121208 man/fuse.1: Update man page for movie, stereo separation and statusbar
         options. Remove reference to fixed issue in joystick dialog on GTK+ UI
         (Sergio).
20121208 man/fuse.1: document support for reading PZX files (Sergio).
20121210 man/fuse.1: fix a couple of typos (Fred).
20121222 hacking/spectranet.txt: add reference to precompiled installers (Fred).
20121222 man/fuse.1: add information on SpecDrum settings and Spectranet
         (bug #3495082) (Fred).
20121222 configure.ac: link explicitly against the math library. This is
         necessary for the binutils gold linker (patch #3596551) (Alberto
         Garcia).
20121225 snapshot.c: support setting late timings from snapshots (Fred).
20121227 man/fuse.1: update descriptions for SpeccyBoot interface and
         confirm-actions option. Fix dashes (Sergio).
20121227 configure.ac: bump version number to 1.1.0 (Fred).
20121227 ChangeLog,README: first updates for a "1.1.0" release (Fred).
20121227 man/fuse.1: fix spelling, capitalisation, dashes, quotes and
         whitespace (Stuart).
20121228 man/fuse.1: fix whitespace and grammar issues (Stuart).
20121228 man/fuse.1: make better use of named glyphs (Stuart).
20121228 man/fuse.1: remove trailing spaces (Stuart).