@@ -4327,3 +4327,4 @@
 20121228 man/fuse.1: fix whitespace and grammar issues (Stuart).
 20121228 man/fuse.1: make better use of named glyphs (Stuart).
 20121228 man/fuse.1: remove trailing spaces (Stuart).
+20121228 compat/unix/socket.c,tape.c,unittests.c: fix warnings.
